--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,8 @@ body {
     color: var(--font-color);
     background-color: var(--white);
     padding: 0 10%;
+    display: flex;
+    flex-direction: column;
 }
 
 header {
@@ -33,8 +35,9 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 2rem;
-    margin-bottom: 2rem;
+    position: relative;
     z-index: 2;
+
 }
 
 button {
@@ -51,9 +54,15 @@ main {
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     gap: 1rem;
     background-color: var(--light-beige);
-    height: 100%;
     align-content: start;
-    /* overflow: auto; */
+    flex: 1;
+    overflow: auto;
+    position: relative;
+    top: -2rem;
+    padding-top: 4rem;
+    padding: 4rem 2em 2em 2em;
+    z-index: 1;
+    /* bottom: 2rem; */
 }
 
 .card {
@@ -67,10 +76,11 @@ main {
 }
 
 footer {
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 80%;
     background-color: var(--white);
     padding: 1rem;
     text-align: center;
+    top: -2rem;
 }
