--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body {
 header {
     background-color: var(--brown);
     height: 6rem;
-    border-radius: 0 0 2rem 2rem;
+    border-radius: 2rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -38,12 +38,14 @@ header {
     position: relative;
     z-index: 2;
     box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.2);
+    margin-top: 1rem;
 }
 
 button {
     font-family: var(--sans);
     background-color: var(--white);
     padding: 1rem;
+    font-size: 1rem;
     border: 0;
     border-radius: 1rem;
     font-weight: 600;
@@ -58,12 +60,11 @@ main {
     flex: 1;
     overflow: auto;
     position: relative;
-    top: -2rem;
-    padding-top: 4rem;
-    padding: 4rem 2em 2em 2em;
+    top: -6rem;
+    padding: 8rem 2em 2em 2em;
     z-index: 1;
-    height: calc(100vh - 7rem);
-    border-radius: 0 0 2rem 2rem;
+    height: calc(100vh - 4rem);
+    border-radius: 2rem;
     box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.2);
 }
 
@@ -87,4 +88,9 @@ footer {
     height: 3rem;
     /* padding: 1rem; */
     text-align: center;
+}
+
+footer a {
+    color: var(--font-color);
+    margin-right: 0.5rem;
 }
