--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ body {
     background-color: var(--white);
     padding: 0 10%;
     /* background-color: var(--body-color); */
+    overflow: hidden;
 }
 
 header {
@@ -55,7 +56,7 @@ button {
 
 main {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1rem;
     background-color: var(--light-beige);
     align-content: start;
@@ -72,12 +73,15 @@ main {
 
 .card {
     background-color: var(--white);
-    height: 8rem;
+    /* height: 8rem; */
     border-radius: 2rem;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    gap: 0.5rem;
     box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.2);
+    padding: 2rem;
 }
 
 footer {
@@ -121,6 +125,18 @@ div.read {
     gap: 0.5rem;
 }
 
-dialog button {
+dialog button,
+.card button {
     background-color: var(--light-beige);
+}
+
+button.read {
+    font-weight: normal;
+    padding: 0.25rem 1rem;
+    background-color: rgb(123, 200, 123);
+}
+
+button.del {
+    background-color: rgb(212, 125, 125);
+    align-self: center;
 }
