--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ input {
     font-size: 1rem;
 }
 
-div.read {
+div.isRead {
     display: flex;
     align-items: center;
     gap: 0.5rem;
@@ -130,7 +130,7 @@ dialog button,
     background-color: var(--light-beige);
 }
 
-button.read {
+button.isRead {
     font-weight: normal;
     padding: 0.25rem 1rem;
     background-color: rgb(123, 200, 123);
