--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     gap: 0.5rem;
     box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.2);
     padding: 2rem;
